# petmol

./: .env.example  .gitignore  ALERTAS_PARAMETRIZADOS_AUDITORIA.md  ARCHITECTURE.md  AUDITORIA_FLUXO_RACAO_USABILIDADE.md  AUDIT_NOTES.md  CHECKLIST_TESTE_NOTIFICACOES_SIMPLES.md  GPT_PRODUCT_LOOKUP_API_HANDOFF.md  PLANO_TESTE_UMA_A_UMA.md  Pata 2.avif  ZIP_CHECKLIST.md  package-lock.json  package.json  scripts_temp.py  scripts_temp2.py  scripts_temp3.py  scripts_temp4.py  scripts_temp5.py  scripts_temp6.py
LEGADO/: README.md
services/price-service/: .gitignore  pyproject.toml  requirements-robust.txt  requirements.txt  test_gem.py  test_gem_inline.py
services/price-service/scripts/: audit_prod_snapshot.py  classify_prod_documents_snapshot.py  cleanup_keep_users.py  fix_storage_keys_prod.py  repopulate_local_pet_documents_from_report.py  smoke_gtin_lookup.py  snapshot_prod_documents_readonly.sh  snapshot_prod_documents_v2.sh
services/price-service/src/: __init__.py  autocomplete.py  catalog.py  config.py  db.py  email_otp.py  feedback_system.py  gtin_client.py  gtin_router.py  handoff.py  handoff_partner.py  i18n.py  keyword_packs.py  main.py  migrations.py  models.py  otp.py  petguard.py  product_catalog_lookup.py  product_lookup.py  rate_limit.py  search.py  services_old.py  version.py
services/price-service/src/admin/: __init__.py  deps.py  models.py  router.py  schemas.py
services/price-service/tests/: test_care_notifications.py  test_config_notifications.py  test_document_classification.py  test_food_notifications.py  test_medication_notifications.py
(+532 files in other folders)
